force-app/main/default/objects/Opportunity/fields/AC_Campaign__c.field-meta.xml
<CustomField>
    <fullName>AC_Campaign__c</fullName>
    <label>AC Campaign</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.AC_Campaign__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>