force-app/main/default/objects/Opportunity/fields/AC_Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AC_Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AC Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Analytics Cloud Opportunities</relationshipLabel>
    <relationshipName>Analytics_Cloud_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>