force-app/main/default/objects/Opportunity/fields/AC_Paid__c.field-meta.xml
<CustomField>
    <fullName>AC_Paid__c</fullName>
    <label>AC Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>