force-app/main/default/objects/Opportunity/fields/Account_Bought_Software__c.field-meta.xml
<CustomField>
    <fullName>Account_Bought_Software__c</fullName>
    <formula>IF( Opportunity_Record_Type_V2__c = &apos;Standard&apos;,  Account.Name ,  IF( Opportunity_Record_Type_V2__c = &apos;Reseller&apos;,  Parent_Opportunity__r.Account.Name , &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customers Bought Software</label>
    <type>Text</type>
</CustomField>