force-app/main/default/objects/Opportunity/fields/Add_Onsite_Products__c.field-meta.xml
<CustomField>
    <fullName>Add_Onsite_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Onsite Products</label>
    <type>Checkbox</type>
</CustomField>