force-app/main/default/objects/Opportunity/fields/Additional_ARR__c.field-meta.xml
<CustomField>
    <fullName>Additional_ARR__c</fullName>
    <label>OLD_Additional ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>