force-app/main/default/objects/Opportunity/fields/Additional_Lic__c.field-meta.xml
<CustomField>
    <fullName>Additional_Lic__c</fullName>
    <formula>IF( Additional_Licenses__c = True, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Lic</label>
    <type>Text</type>
</CustomField>