force-app/main/default/objects/Opportunity/fields/Additional_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Licenses</label>
    <type>Checkbox</type>
</CustomField>