force-app/main/default/objects/Opportunity/fields/affectlayer__AffectLayer_Notes__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Notes__c</fullName>
    <formula>HYPERLINK(&apos;/apex/affectlayer__AffectLayerNotes?objectId=&apos; &amp; Id &amp; &apos;&amp;objectType=Opportunity&apos; &amp; &apos;&amp;accountId=&apos; &amp;  Account.Id , &apos;Listen To Call&apos;, &apos;_self&apos;)</formula>
    <label>AffectLayer</label>
    <type>Text</type>
</CustomField>