force-app/main/default/objects/Opportunity/fields/Alert_Insight__c.field-meta.xml
<CustomField>
    <fullName>Alert_Insight__c</fullName>
    <formula>Insight_Analysis__c -  Alert_Set_Up_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert - Insight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>