force-app/main/default/objects/Opportunity/fields/Alert_Set_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Set_Up_Date__c</fullName>
    <label>Alert Set Up Date</label>
    <type>Date</type>
</CustomField>