force-app/main/default/objects/Opportunity/fields/Alliance__c.field-meta.xml
<CustomField>
    <fullName>Alliance__c</fullName>
    <label>DEPRECATE Alliance Partner Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutal</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>