force-app/main/default/objects/Opportunity/fields/Alliance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATE Alliance Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alliance Partner Opportunities</relationshipLabel>
    <relationshipName>Alliance_Partner_opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>