force-app/main/default/objects/Opportunity/fields/Alliance_Partner_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner_Percentage__c</fullName>
    <label>DEPRECATE Alliance Partner %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>