force-app/main/default/objects/Opportunity/fields/AM_Perpetual_Attainment__c.field-meta.xml
<CustomField>
    <fullName>AM_Perpetual_Attainment__c</fullName>
    <label>OLD_AM_Perpetual_Attainment</label>
    <summarizedField>OpportunityLineItem.List_Price_Total3__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>DESKTOP_ENHANCEMENT, DESKTOP_PRODUCTS, DESKTOP_SPLA, PERPETUAL_DISCOUNT</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>