force-app/main/default/objects/Opportunity/fields/AM_Perpetual_Attainment_V2__c.field-meta.xml
<CustomField>
    <fullName>AM_Perpetual_Attainment_V2__c</fullName>
    <formula>IF( CloseDate &lt; DATE(2022,06,01) ,  AM_Perpetual_Old_List_Price__c, AM_Perpetual_Attainment__c )</formula>
    <label>OLD_AM_Perpetual Attainment_V2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>