force-app/main/default/objects/Opportunity/fields/AM_Perpetual_Closed__c.field-meta.xml
<CustomField>
    <fullName>AM_Perpetual_Closed__c</fullName>
    <formula>IF(IsClosed =True,  AM_Perpetual_Attainment__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD_AM Perpetual Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>