force-app/main/default/objects/Opportunity/fields/AM_Perpetual_Old_List_Price__c.field-meta.xml
<CustomField>
    <fullName>AM_Perpetual_Old_List_Price__c</fullName>
    <label>OLD_AM_Perpetual Old List Price</label>
    <summarizedField>OpportunityLineItem.Old_List_Pricev2__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>DESKTOP_ENHANCEMENT, DESKTOP_PRODUCTS, DESKTOP_SPLA, PERPETUAL_DISCOUNT</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>