force-app/main/default/objects/Opportunity/fields/AM_Software_Attainment2__c.field-meta.xml
<CustomField>
    <fullName>AM_Software_Attainment2__c</fullName>
    <label>OLD_AM_Software Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>