force-app/main/default/objects/Opportunity/fields/AM_Software_Attainment__c.field-meta.xml
<CustomField>
    <fullName>AM_Software_Attainment__c</fullName>
    <formula>AM_Subscription_Attainment_V2__c +   AM_Perpetual_Attainment_V2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD_AM_Software Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>