force-app/main/default/objects/Opportunity/fields/AM_Sub_Attainment_Old_List_Price__c.field-meta.xml
<CustomField>
    <fullName>AM_Sub_Attainment_Old_List_Price__c</fullName>
    <label>OLD_AM_Sub Attainment Old List Price</label>
    <summarizedField>OpportunityLineItem.Subscription_Old_List_Price_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>CLOUD_PRODUCTS, DESKTOP_SUBSCRIPTION, DISTRIBUTION_CLOUD, INTELLIGENCE, SALESPAD_SUBSCRIPTION, ANALYTICS CLOUD, SUBSCRIPTION_DISCOUNT</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>