force-app/main/default/objects/Opportunity/fields/AM_Subscription_Attainment__c.field-meta.xml
<CustomField>
    <fullName>AM_Subscription_Attainment__c</fullName>
    <label>AM_Subscription_Attainment</label>
    <summarizedField>OpportunityLineItem.Subscription_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>CLOUD_PRODUCTS, DESKTOP_SUBSCRIPTION, DISTRIBUTION_CLOUD, INTELLIGENCE, SALESPAD_SUBSCRIPTION, ANALYTICS CLOUD, SUBSCRIPTION_DISCOUNT</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>