force-app/main/default/objects/Opportunity/fields/AM_Subscription_Attainment_V2__c.field-meta.xml
<CustomField>
    <fullName>AM_Subscription_Attainment_V2__c</fullName>
    <formula>IF( CloseDate &lt;  DATE(2022,06,01) ,  AM_Sub_Attainment_Old_List_Price__c ,  AM_Subscription_Attainment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD_AM_Subscription_Attainment_V2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>