force-app/main/default/objects/Opportunity/fields/Analytics_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Cloud</label>
    <type>Checkbox</type>
</CustomField>