force-app/main/default/objects/Opportunity/fields/Analytics_Cloud_Amount__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Cloud_Amount__c</fullName>
    <label>Analytics Cloud Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>DISTRIBUTION_CLOUD, ANALYTICS CLOUD</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>