force-app/main/default/objects/Opportunity/fields/Analytics_Cloud_Opp__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Cloud_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Cloud Opp?</label>
    <type>Checkbox</type>
</CustomField>