force-app/main/default/objects/Opportunity/fields/Annual_Contract__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if paying for the full year upfront</inlineHelpText>
    <label>Annual Contract</label>
    <type>Checkbox</type>
</CustomField>