force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>HT - Sercante - 04/01/2021 - Rollup that totals the Price of all products in the Desktop Enhancement products on the opportunity.</description>
    <label>DEPRECATE Total ARR (Opp)</label>
    <summarizedField>OpportunityLineItem.List_Price_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>CLOUD_PRODUCTS, DESKTOP_ENHANCEMENT, DESKTOP_SPLA, DESKTOP_SUBSCRIPTION, DISTRIBUTION_CLOUD, INTELLIGENCE, SALESPAD_SUBSCRIPTION, CAVALLO_FOR_BC</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>