force-app/main/default/objects/Opportunity/fields/ARR_w_Partner_Coupon__c.field-meta.xml
<CustomField>
    <fullName>ARR_w_Partner_Coupon__c</fullName>
    <description>ARR after customer discounts + partner payments</description>
    <label>DEPRECATE ARR w/ Partner Coupon</label>
    <summarizedField>OpportunityLineItem.Net_ARR_Opp_Product__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>