force-app/main/default/objects/Opportunity/fields/ARR_w_Partner_Coupon_formula__c.field-meta.xml
<CustomField>
    <fullName>ARR_w_Partner_Coupon_formula__c</fullName>
    <formula>ARR_w_Software_Discount_formula__c - (ARR_w_Software_Discount_formula__c * Coupon_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR w/ Partner Coupon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>