force-app/main/default/objects/Opportunity/fields/ARR_w_Software_Discount__c.field-meta.xml
<CustomField>
    <fullName>ARR_w_Software_Discount__c</fullName>
    <description>ARR after customer discounts only (no partner payments)</description>
    <label>DEPRECATE ARR w/ Software Discount</label>
    <summarizedField>OpportunityLineItem.ARR_MFC__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>