force-app/main/default/objects/Opportunity/fields/ARR_w_Software_Discount_formula__c.field-meta.xml
<CustomField>
    <fullName>ARR_w_Software_Discount_formula__c</fullName>
    <formula>Sales_ARR_MFC1__c - (Sales_ARR_MFC1__c * Manual_Discount__c) - Manual_Discount_Fixed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR w/ Software Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>