force-app/main/default/objects/Opportunity/fields/Assigned_Partner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Partner__c</fullName>
    <inlineHelpText>The is the partner that gets credit for this deal - either as a strategic partner or as a referral partner.  Check their account record to see what level they are at and what they receive.</inlineHelpText>
    <label>Assigned Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountability Tax</fullName>
            </value>
            <value>
                <fullName>Accounting Computer Solutions-3672</fullName>
            </value>
            <value>
                <fullName>Accounting Technology Solutions, LLC-2858</fullName>
            </value>
            <value>
                <fullName>ACE Microtechnology, Inc-310</fullName>
            </value>
            <value>
                <fullName>Adirondack Data Systems (ADS)-418</fullName>
            </value>
            <value>
                <fullName>Admiral Consulting Group-10037</fullName>
            </value>
            <value>
                <fullName>Advanced Business Networks Inc. (Advanced Business Software Inc.)-622</fullName>
            </value>
            <value>
                <fullName>Advanced Integrators-376</fullName>
            </value>
            <value>
                <fullName>AKA Enterprise Solutions, Inc.-494</fullName>
            </value>
            <value>
                <fullName>Alpha-Pure-1</fullName>
            </value>
            <value>
                <fullName>Altara - Main Headquarters (West)-4085447000</fullName>
            </value>
            <value>
                <fullName>Alta Vista Technology-2155</fullName>
            </value>
            <value>
                <fullName>Ameridyn (Logical IT Solutions)-1229</fullName>
            </value>
            <value>
                <fullName>Amuse Mints-2914</fullName>
            </value>
            <value>
                <fullName>Arctic Information Technology, Inc.-482</fullName>
            </value>
            <value>
                <fullName>Argus Consulting Group-574</fullName>
            </value>
            <value>
                <fullName>Armanino (AMLLP)-355</fullName>
            </value>
            <value>
                <fullName>ASI - Associates Solutions, Inc.-562</fullName>
            </value>
            <value>
                <fullName>ATC Consulting Services-3637</fullName>
            </value>
            <value>
                <fullName>AVM Consulting Inc (Affordable-IT)-2078</fullName>
            </value>
            <value>
                <fullName>AxentIT-3044</fullName>
            </value>
            <value>
                <fullName>Axxon Consulting Chile</fullName>
            </value>
            <value>
                <fullName>Aztec Systems, Inc.-67</fullName>
            </value>
            <value>
                <fullName>Balance Point Technologies, Inc.-483</fullName>
            </value>
            <value>
                <fullName>BatchMaster Software-1642</fullName>
            </value>
            <value>
                <fullName>BDO Canada LLP (fka Etelligent Solutions Inc.)-348</fullName>
            </value>
            <value>
                <fullName>BDO Solutions (BDO Dunwoody LLP)-530</fullName>
            </value>
            <value>
                <fullName>BKD Technologies-454</fullName>
            </value>
            <value>
                <fullName>Blue Moon Industries-889</fullName>
            </value>
            <value>
                <fullName>Bond Consulting Services-410</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>