force-app/main/default/objects/Opportunity/fields/At_bat__c.field-meta.xml
<CustomField>
    <fullName>At_bat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At-bat</label>
    <type>Checkbox</type>
</CustomField>