force-app/main/default/objects/Opportunity/fields/At_bat_Date__c.field-meta.xml
<CustomField>
    <fullName>At_bat_Date__c</fullName>
    <label>At-bat Date</label>
    <type>Date</type>
</CustomField>