force-app/main/default/objects/Opportunity/fields/BC_New_Customer_Form__c.field-meta.xml
<CustomField>
    <fullName>BC_New_Customer_Form__c</fullName>
    <label>BC - New Customer Form</label>
    <type>Url</type>
</CustomField>