force-app/main/default/objects/Opportunity/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill</label>
    <type>Checkbox</type>
</CustomField>