force-app/main/default/objects/Opportunity/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time and Materials</fullName>
                <default>true</default>
                <label>Time and Materials</label>
            </value>
            <value>
                <fullName>Fixed Rate</fullName>
            </value>
            <value>
                <fullName>Not-To-Exceed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>