force-app/main/default/objects/Opportunity/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>