force-app/main/default/objects/Opportunity/fields/Billing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Billing_Preference__c</fullName>
    <label>Software Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill direct, do not pay partner margin</fullName>
            </value>
            <value>
                <fullName>Bill through Partner</fullName>
            </value>
            <value>
                <fullName>Bill direct, pay partner margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>