force-app/main/default/objects/Opportunity/fields/Bridge__c.field-meta.xml
<CustomField>
    <fullName>Bridge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bridge</label>
    <type>Checkbox</type>
</CustomField>