force-app/main/default/objects/Opportunity/fields/Bridge_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Notes__c</fullName>
    <inlineHelpText>Please add the following information: Timeline of ERP change, technical risks, etc.</inlineHelpText>
    <label>Bridge Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>