force-app/main/default/objects/Opportunity/fields/Budge_Qualification_Note__c.field-meta.xml
<CustomField>
    <fullName>Budge_Qualification_Note__c</fullName>
    <label>DEPRECATE Budge Qualification Note</label>
    <type>TextArea</type>
</CustomField>