force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>