force-app/main/default/objects/Opportunity/fields/Budget_Qualification_Note__c.field-meta.xml
<CustomField>
    <fullName>Budget_Qualification_Note__c</fullName>
    <label>Budget Qualification Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>