force-app/main/default/objects/Opportunity/fields/Budget_Qualify_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Qualify_Email_Sent__c</fullName>
    <label>Budget Qualify Email Sent</label>
    <type>Date</type>
</CustomField>