force-app/main/default/objects/Opportunity/fields/Bug_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bug_Notes__c</fullName>
    <label>Bug Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>