force-app/main/default/objects/Opportunity/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <inlineHelpText>ROI.  What’s the reason for the Client to fix these challenges?  How would they quantify the benefits of solving this problem?  Does the client buy into the amount of benefit you’re suggesting?</inlineHelpText>
    <label>Business Case (ROI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>