force-app/main/default/objects/Opportunity/fields/Business_Case_ROI_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_ROI_Date__c</fullName>
    <label>Business Case/ROI Date</label>
    <type>Date</type>
</CustomField>