force-app/main/default/objects/Opportunity/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesPad</fullName>
            </value>
            <value>
                <fullName>SalesPad for BC</fullName>
            </value>
            <value>
                <fullName>Profit Max Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>