force-app/main/default/objects/Opportunity/fields/Buying_Process__c.field-meta.xml
<CustomField>
    <fullName>Buying_Process__c</fullName>
    <inlineHelpText>Approval process steps.  A great way to ask this question is “tell me about the last time you bought software… what steps did you go through?</inlineHelpText>
    <label>Buying Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>