force-app/main/default/objects/Opportunity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery Call</fullName>
                <default>true</default>
                <label>Discovery Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>