force-app/main/default/objects/Opportunity/fields/CAM_Quota_Attainment__c.field-meta.xml
<CustomField>
    <fullName>CAM_Quota_Attainment__c</fullName>
    <label>OLD_CAM Quota Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>