force-app/main/default/objects/Opportunity/fields/CAM_Quota_Attainment_Closed__c.field-meta.xml
<CustomField>
    <fullName>CAM_Quota_Attainment_Closed__c</fullName>
    <formula>IF( TEXT(StageName )  = &apos;Closed Won&apos;, CAM_Quota_Attainment__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD_CAM Quota Attainment_Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>