force-app/main/default/objects/Opportunity/fields/Cavallo_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Cavallo_Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cavallo Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>