force-app/main/default/objects/Opportunity/fields/CF_Description__c.field-meta.xml
<CustomField>
    <fullName>CF_Description__c</fullName>
    <formula>&quot;They have, or will acquire, the expertise required internally to be successful, including management, technical, and subject matter expertise&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CF Description</label>
    <type>Text</type>
</CustomField>