force-app/main/default/objects/Opportunity/fields/Challenges_Needs__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Needs__c</fullName>
    <inlineHelpText>What business challenges are they facing?  What problems are they trying to solve?  Why are they spending valuable time speaking to you?  What do they hope to overcome?</inlineHelpText>
    <label>Challenges (Need)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>