force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who will fight internal battles for you?  This may be your project sponsor, but could also be another person in the organization who has a motivation to see you get this deal done.</inlineHelpText>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>