force-app/main/default/objects/Opportunity/fields/Champion_Status__c.field-meta.xml
<CustomField>
    <fullName>Champion_Status__c</fullName>
    <label>Champion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Leveraging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>