force-app/main/default/objects/Opportunity/fields/Change_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order Required?</label>
    <type>Checkbox</type>
</CustomField>