force-app/main/default/objects/Opportunity/fields/Change_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Type__c</fullName>
    <label>Change Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation</fullName>
                <default>true</default>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>